REST Dati anagrafici Modifica a JWT utility
